Bug fixes. Hamburger menu shadow is back to darker black, Newsroom blogs card has bigger width on mobile view, bigger height on Tablet view. Newsroom posting has smaller font on tablet vew and bigger font on desktop view.

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -178,7 +178,7 @@ a:visited {
     background-color:rgb(49, 49, 49);
     position: relative;
     top: -80px;
-    box-shadow: 0 0.3rem 4rem rgba(98, 98, 98, 0.411);
+    box-shadow: 0 0.3rem 2rem rgba(32, 32, 32, 0.963);
     z-index: 1;
 }
 .navbar-container input[type="checkbox"]:checked ~ .nav-menu-container {
@@ -424,12 +424,12 @@ a:visited {
     scroll-snap-type: x mandatory;
     scroll-padding: 24px;
     border-radius: 8px;
-    gap: 1rem;
+    gap: 0.75rem;
     background:rgb(255, 255, 255);
     animation: slide 1.5s forwards;
 }
 .blogs-contents {
-    flex: 0 0 250px;
+    flex: 0 0 275px;
     height: 100%;
     background-color: white;
     border-radius: 8px;
@@ -443,7 +443,6 @@ a:visited {
     border-radius: 8px 8px 0 0;
     width: 100%;
     height: 50%;
-    min-height: 50%;
     margin-bottom: 1rem;
 }
 .post-photo1 {
@@ -631,13 +630,10 @@ a:visited {
         flex-flow: row wrap;
         margin-bottom: 6vh;
     }
-    .post-photo {
-        width: 100%;
-    }
     .blogs-contents {
         flex: none;
         width: calc(93vw/2 - 2rem);
-        height: 50vh;
+        height: 500px;
         max-width: 340px;
     }
     .post {
@@ -671,6 +667,9 @@ a:visited {
     }
     .posting-container .post-description {
         line-height: 1.5rem;
+        font-size : 0.7rem;
+        padding-left: 1rem;
+        padding-right: 1rem;
     }
 }
 /* desktop view */
@@ -838,5 +837,8 @@ a:visited {
     }
     .posting-container .post-description {
         line-height: 1.5rem;
+        font-size: 0.9rem;
+        padding-left: 2rem;
+        padding-right: 2rem;
     }
 }
